--- a/CARTELERA/CARTELERA_1/css/main.css
+++ b/CARTELERA/CARTELERA_1/css/main.css
@@ -1,8 +1,11 @@
 * {
+  
   box-sizing: border-box;
 }
 body {
   font-size: 14px;
+  width: 100%;
+  margin: 0;
 }
 .v0_3 {
   width: 100%;
@@ -73,7 +76,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 69px;
-  left: 637px;
+  left: 500px;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
@@ -102,9 +105,10 @@ body {
   top: 331px;
   left: 0px;
   overflow: hidden;
+  
 }
 .v9_20 {
-  width: 340px;
+  width: 300px;
   height: 510px;
   background: url("../images/v9_20.png");
   background-repeat: no-repeat;
@@ -122,7 +126,7 @@ body {
   overflow: hidden;
 }
 .v9_21 {
-  width: 366px;
+  width: 300px;
   height: 510px;
   background: url("../images/v9_21.png");
   background-repeat: no-repeat;
@@ -131,7 +135,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 445px;
-  left: 356px;
+  left: 345px;
   border: 10px solid rgba(92,92,92,1);
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
@@ -140,7 +144,7 @@ body {
   overflow: hidden;
 }
 .v9_22 {
-  width: 345px;
+  width: 300px;
   height: 511px;
   background: url("../images/v9_22.png");
   background-repeat: no-repeat;
@@ -149,7 +153,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 445px;
-  left: 709px;
+  left: 680px;
   border: 10px solid rgba(92,92,92,1);
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
@@ -158,7 +162,7 @@ body {
   overflow: hidden;
 }
 .v9_23 {
-  width: 346px;
+  width: 300px;
   height: 509px;
   background: url("../images/v9_23.png");
   background-repeat: no-repeat;
@@ -167,7 +171,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 447px;
-  left: 355px;
+  left: 1022px;
   border: 10px solid rgba(92,92,92,1);
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
@@ -205,39 +209,58 @@ body {
   opacity: 1;
   text-align: center;
 }
-.v9_97 {
+
+.v9_97 button a {
   width: 154px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 280px;
   left: 138px;
+
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
   opacity: 1;
   text-align: center;
+    
 }
-.v9_98 {
+.v9_98 button a {
   width: 177px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 280px;
-  left: 644px;
+  left: 1050px;
+
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
   opacity: 1;
   text-align: center;
+    
 }
-.v9_99 {
+.v9_99 button a {
   width: 128px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 280px;
-  left: 266px;
+  left: 650px;
+
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
   opacity: 1;
   text-align: center;
+  
 }
