--- a/COMPLEJOS/css/main.css
+++ b/COMPLEJOS/css/main.css
@@ -3,6 +3,8 @@
 }
 body {
   font-size: 14px;
+  width: 100%;
+  margin: 0;
 }
 .v9_76 {
   width: 100%;
@@ -58,36 +60,51 @@ body {
   border: 2px solid rgba(0,0,0,0.550000011920929);
   overflow: hidden;
 }
-.v9_83 {
+.v9_83 button a {
   width: 154px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 125px;
+  left: 138px;
+  
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
   opacity: 1;
   text-align: center;
 }
-.v9_84 {
+.v9_84 button a {
   width: 177px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 631px;
+  left: 1050px;
+  
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
   opacity: 1;
   text-align: center;
 }
-.v9_85 {
+.v9_85 button a {
   width: 128px;
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 279px;
+  left: 650px;
+  
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
   font-family: Inter;
   font-weight: Regular;
   font-size: 32px;
@@ -140,7 +157,7 @@ body {
   overflow: hidden;
 }
 .v9_91 {
-  width: 852px;
+  width: 800px;
   height: 497px;
   background: url("../images/v9_91.png");
   background-repeat: no-repeat;
