--- a/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
@@ -1,6 +1,6 @@
 {% extends './base.html' %}
 {% load static %}
-{% block css %} <link href="../../static/autocine_pig/complejos/css/main.css" rel="stylesheet" />{% endblock %}
+{% block css %} <link href="{% static 'autocine_pig/complejos/css/main.css' %}" rel="stylesheet" />{% endblock %}
 
 {% block titulo %} 
 Complejos
@@ -8,7 +8,7 @@ Complejos
 
 {% block contenido %}
 
-<div class="v9_76">
+    <div class="v9_76">
     <div class="v9_77"></div>
     <div class="v9_80"></div>
     <div class="v9_81"></div>
