--- a/autocine - django/autocine_pig/templates/autocine_pig/base.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/base.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    
 
-    {% block css %}  {% endblock %}
-    <title>{% block titulo %} {% endblock %}</title>
-  </head>
-  <body>
-    {% block contenido %} 
-    {% endblock %}
-  </body>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="../../static/autocine_pig/base/css/main.css" rel="stylesheet" />
+  {% block css %} {% endblock %}
+  
+  <title>{% block titulo %} {% endblock %}</title>
+
+</head>
+
+<body>
+
+
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-dark">
+      <div class="container-fluid">
+        <a href="{% url 'index' %}" class="navbar-brand">Autocine</a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="MenuNavegacion" class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-3">
+            <li class="nav-item"><a class="nav-link"
+                href="# aca tenes que poner el enlace a pagina o al login">LOGIN</a></li>
+            <li class="nav-item"><a class="nav-link"
+                href="{% url 'registrar' %}">Registrarse</a></li>
+            <li class="nav-item"><a class="nav-link"
+                  href="# aca tenes que poner el enlace a pagina o al login">Ayuda</a></li>
+            <li class="nav-item"><a class="nav-link"
+                href=".">Nosotros</a></li>
+
+          </ul>
+        </div>
+      </div>
+
+    </nav>
+  </div>
+
+
+  {% block contenido %}
+
+  {% endblock %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
