--- a/autocine - django/autocine_pig/templates/autocine_pig/valores.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/valores.html
@@ -2,10 +2,9 @@
 
 {% load static %}
 
-{% block css %} <link href="../../static/autocine_pig/valores/css/main.css" rel="stylesheet" />
+{% block css %} <link href="{% static 'autocine_pig/valores/css/main.css' %}" rel="stylesheet" />
 
-<link href="https://fonts.googleapis.com/css?family=Inter&display=swap"
-      rel="stylesheet"/>
+
       
 {% endblock %}
 
@@ -14,7 +13,7 @@ Valores
 {% endblock %}
 
 {% block contenido %} 
-<div class="v9_171">
+    <div class="v9_171">
     <div class="v9_172"></div>
     <div class="v9_175"></div>
     <div class="v9_176"></div>
