--- a/autocine - django/autocine_pig/templates/autocine_pig/base.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/base.html
@@ -3,11 +3,18 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="../../static/autocine_pig/base/css/main.css" rel="stylesheet" />
-  {% block css %} {% endblock %}
   
+  
+
+
+  <link href="../../static/autocine_pig/base/css/main.css" rel="stylesheet"/>
+  
+  <script src="https://kit.fontawesome.com/f7eb2218e7.js" crossorigin="anonymous"></script>
+  {% block css %} {% endblock %}
+
   <title>{% block titulo %} {% endblock %}</title>
 
 </head>
@@ -26,12 +33,9 @@
           <ul class="navbar-nav ms-3">
             <li class="nav-item"><a class="nav-link"
                 href="# aca tenes que poner el enlace a pagina o al login">LOGIN</a></li>
-            <li class="nav-item"><a class="nav-link"
-                href="{% url 'registrar' %}">Registrarse</a></li>
-            <li class="nav-item"><a class="nav-link"
-                  href="# aca tenes que poner el enlace a pagina o al login">Ayuda</a></li>
-            <li class="nav-item"><a class="nav-link"
-                href=".">Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'registrar' %}">Registrarse</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href=".">Nosotros</a></li>
 
           </ul>
         </div>
@@ -40,14 +44,41 @@
     </nav>
   </div>
 
+  <section class="mensajes">
 
+    {% if messages %}
+  {% for message in messages %}
+    {% if message.tags == 'success' %}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
+  </section>
   {% block contenido %}
 
   {% endblock %}
 
+
+  <footer>
+    <br>
+    <a class="redsoc" href="https:/www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+    <a class="redsoc" href="https:/www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    <a class="redsoc" href="https:/www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    <a class="redsoc" href="https:/www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+    
+
 </body>
 
 </html>
