--- a/autocine - django/autocine_pig/static/autocine_pig/registrar/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/registrar/css/main.css
@@ -13,9 +13,7 @@ form {
   flex-direction: column;
   align-items: center;
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
   padding: 20px;
-  border-radius: 10px;
   position: relative;
   background-color: rgb(27, 26, 26);
 
@@ -137,4 +135,9 @@ label {
   top: 60px;
   left: 392px;
   overflow: hidden;
+}
+
+.errorlist {
+
+  color: #db1414;
 }
