--- a/autocine - django/autocine_pig/static/autocine_pig/contacto/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/contacto/css/main.css
@@ -6,18 +6,18 @@ body {
   font-size: 14px;
   width: 100%;
   margin: 0;
+  background-color: black;
 }
 
 form {
 
-  
   display: flex;
   flex-direction: column;
   align-items:baseline;
   font-family: Arial, sans-serif;
   padding: 20px;
   position: relative;
-  background-color: rgb(27, 26, 26);
+  background-color: black;
   
   
 }
