--- a/autocine - django/autocine_pig/templates/autocine_pig/index.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/index.html
@@ -13,11 +13,11 @@
   <div class="v2_14"></div>
   <span class="v3_15">LOGOTIPO_AUTOCINE</span>
   <div class="v8_16"></div>
-  <div class="v8_19"></div>
-  <div class="v9_20"></div>
-  <div class="v9_21"></div>
-  <div class="v9_22"></div>
-  <div class="v9_23"></div>
+  <div class="v8_19"></div>  
+  <a href="{% url 'complejos' %}"><div class="v9_20"></div></a>  
+  <a href="{% url 'complejos' %}"><div class="v9_21"></div></a>
+  <a href="{% url 'complejos' %}"><div class="v9_22"></div></a>
+  <a href="{% url 'complejos' %}"><div class="v9_23"></div></a>
   <div class="v9_28"></div>
   <div class="v9_24"></div>
   <span class="v9_27">Seleccioná la película para ver días y horarios</span>
