--- a/autocine - django/autocine_pig/templates/autocine_pig/index.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/index.html
@@ -27,5 +27,11 @@
 </div>
 
 </div>
+<ul>
+  {% for pelicula in peliculas %}
+      <li>{{pelicula}}
+      </li>
+  {% endfor %}
+</ul>
 {% endblock %}
 
