--- a/autocine - django/autocine_pig/templates/autocine_pig/valores.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/valores.html
@@ -27,14 +27,29 @@ Valores
     <div class="v9_184"></div>
     <div class="v9_186"></div>
     <div class="v9_187"></div>
-    <span class="v9_188">El Valor de la entrada es único</span
-    ><span class="v9_189">Entrada Única$1000</span>
-    <div class="v10_2"></div>
-    <span class="v10_3">(Valor sujeto a modificaciones)</span>
+    <span class="v9_188">Valores de Cartelera</span>
+    <div class="v10_2"><h2>La Pelicula "{{ pelicula.titulo }}" tiene los siguientes valores:</h2>
+      {% if valores %}
+        <ul>
+          {% for valor in valores %}
+            <li>{{ valor.valor }}</li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>No se encontraron valores para esta película.</p>
+      {% endif %}</div>
+    
     <div class="v10_5"></div>
     <span class="v10_6">Para consultas puede mandar mail a: </span
     ><span class="v10_7">consultas@miradas.fugaces.com</span>
   </div>
-</body>
+
+
+ 
+
+  
+    
+  
+
 
 {% endblock %}
