--- a/autocine - django/autocine_pig/static/autocine_pig/complejos/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/complejos/css/main.css
@@ -228,3 +228,24 @@ body {
   opacity: 1;
   text-align: left;
 }
+
+.v9_95 {
+  display: block;
+  margin: 20px;
+  padding: 20px;
+  background-color: black;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+  color: #f1ebeb;
+}
+
+article {
+  background-color: black;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 10px;
+
+  flex: 1;
+}
+
