--- a/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
@@ -1,38 +1,65 @@
 {% extends './base.html' %}
 {% load static %}
-{% block css %} <link href="{% static 'autocine_pig/complejos/css/main.css' %}" rel="stylesheet" />{% endblock %}
+{% block css %}
+<link href="{% static 'autocine_pig/complejos/css/main.css' %}" rel="stylesheet" />{% endblock %}
 
-{% block titulo %} 
+{% block titulo %}
 Complejos
 {% endblock %}
 
 {% block contenido %}
 
-    <div class="v9_76">
-    <div class="v9_77"></div>
-    <div class="v9_80"></div>
-    <div class="v9_81"></div>
-    <div class="v9_82"></div>
-    <span class="v9_83"><button><a href="{% url 'index' %}">Cartelera</a></button></span>
-    <span class="v9_84"><button><a href="{% url 'complejos' %}">Complejos</a></button></span>    
-    <span class="v9_85"><button><a href="{% url 'valores' %}">Valores</a></button></span>
-    <div class="v9_87"></div>
-    <span class="v9_88">LOGOTIPOAUTOCINE </span>
-    <div class="v9_89"></div>
-    <div class="v9_90"></div>
-    <div class="v9_91"></div>
-    <div class="v9_92"></div>
-    <div class="v9_93"></div>
-    <span class="v9_94">Complejos ubicados en Palermo</span>
-  
-          <span class="v9_95">
-            {% for complejo in complejos %}
-            <p>{{complejo}}
-              </p>
-            {% endfor %}
-          </span>
-  
+<div class="v9_76">
+  <div class="v9_77"></div>
+  <div class="v9_80"></div>
+  <div class="v9_81"></div>
+  <div class="v9_82"></div>
+  <span class="v9_83"><button><a href="{% url 'index' %}">Cartelera</a></button></span>
+  <span class="v9_84"><button><a href="{% url 'complejos' %}">Complejos</a></button></span>
+  <span class="v9_85"><button><a href="{% url 'valores' %}">Valores</a></button></span>
+  <div class="v9_87"></div>
+  <span class="v9_88">LOGOTIPOAUTOCINE </span>
+  <div class="v9_89"></div>
+  <div class="v9_90"></div>
+  <div class="v9_91"></div>
+  <div class="v9_92"></div>
+  <div class="v9_93"></div>
+  <span class="v9_94">Complejos ubicados en Palermo</span>
 
-  </div>
+
+
+
+  <span class="v9_95">
+    {% if pelicula and pelicula.id %}
+      <h2>La Película "{{ pelicula.titulo }}" está disponible para verla en:</h2>
+      {% if complejos %}
+        <ul>
+          {% for complejo in complejos %}
+            <li>
+              <a href="{% url 'valores' %}">
+                {{ complejo.nombre }}, {{ complejo.direccion }}
+              </a>
+              
+            </li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        <p>No se encontraron proyecciones para esta película.</p>
+      {% endif %}
+    {% else %}
+      <p>No se encontró información de la película.</p>
+    {% endif %}
+  </span>
+
+
+
+
+
+
+
+
+</div>
+
+
 
 {% endblock %}
