--- a/autocine - django/autocine_pig/static/autocine_pig/valores/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/valores/css/main.css
@@ -68,7 +68,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 138px;
+  left: 100px;
 
   text-decoration: none;
   background-color: transparent; 
@@ -85,7 +85,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 1050px;
+  left: 450px;
 
   text-decoration: none;
   background-color: transparent; 
@@ -102,7 +102,24 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 650px;
+  left: 850px;
+
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
+  font-family: Inter;
+  font-weight: Regular;
+  font-size: 32px;
+  opacity: 1;
+  text-align: center;
+}
+.v9_180a button a {
+  width: 128px;
+  color: rgba(255,255,255,1);
+  position: absolute;
+  top: 281px;
+  left: 1140px;
 
   text-decoration: none;
   background-color: transparent; 
