--- a/autocine - django/autocine_pig/templates/autocine_pig/index.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/index.html
@@ -33,10 +33,13 @@
   <span class="v9_97"><button><a href="{% url 'index' %}">Cartelera</a></button></span>
   <span class="v9_98"><button><a href="{% url 'complejos' %}">Complejos</a></button></span>
   <span class="v9_99"><button><a href="{% url 'valores' %}">Valores</a></button></span>
+  {% if user.is_authenticated %}
+  <span class="v9_99a"><button><a href="{% url 'reserva' %}">Reservar</a></button></span>
+  {% endif %}
 </div>
 
 <section class="listado">
-  <form method="post" action="{% url 'complejos' %}?pelicula_id={{ pelicula_id }}">
+  <form method="post" action="{% url 'complejos' %}">
     {% csrf_token %}
     <label for="pelicula">Seleccione una película:</label>
     <select name="pelicula_id" id="pelicula">
