--- a/autocine - django/autocine_pig/static/autocine_pig/complejos/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/complejos/css/main.css
@@ -67,7 +67,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 138px;
+  left: 100px;
   
   text-decoration: none;
   background-color: transparent; 
@@ -84,7 +84,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 1050px;
+  left: 450px;
   
   text-decoration: none;
   background-color: transparent; 
@@ -101,7 +101,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 650px;
+  left: 850px;
   
   text-decoration: none;
   background-color: transparent; 
@@ -113,6 +113,25 @@ body {
   opacity: 1;
   text-align: center;
 }
+
+.v9_85a button a {
+  width: 128px;
+  color: rgba(255,255,255,1);
+  position: absolute;
+  top: 281px;
+  left: 1140px;
+  
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
+  font-family: Inter;
+  font-weight: Regular;
+  font-size: 32px;
+  opacity: 1;
+  text-align: center;
+}
+
 .v9_87 {
   width: 376px;
   height: 183px;
