--- a/autocine - django/autocine_pig/templates/autocine_pig/base.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/base.html
@@ -7,21 +7,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   
-  
-
-
   <link href="../../static/autocine_pig/base/css/main.css" rel="stylesheet"/>
   
   <script src="https://kit.fontawesome.com/f7eb2218e7.js" crossorigin="anonymous"></script>
   {% block css %} {% endblock %}
 
   <title>{% block titulo %} {% endblock %}</title>
-
 </head>
 
+{% if messages %}
+  {% for message in messages %}
+  <div class="notification {{ message.tags }}">
+    {{ message }}
+  </div>
+  {% endfor %}
+{% endif %}
+
+
 <body>
-
-
   <div class="container-fluid">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-dark">
       <div class="container-fluid">
@@ -31,11 +34,15 @@
         </button>
         <div id="MenuNavegacion" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-3">
-            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">LOGIN</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'registrar_usuario' %}">Registrarse</a></li>
+            {% if user.is_authenticated %}
+            <li class="nav-item"><a class="nav-link"> {{ user.get_username | upper }}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
+            {% endif %}
             <li class="nav-item"><a class="nav-link" href="{% url 'contacto' %}">Contacto</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'nosotros' %}">Nosotros</a></li>
-
           </ul>
         </div>
       </div>
