--- a/autocine - django/autocine_pig/templates/registration/login.html
+++ b/autocine - django/autocine_pig/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %}
+{% extends 'autocine_pig/base.html' %}
 {% load static %}
 
 {% block css %} <link href="{% static 'autocine_pig/login/css/main.css' %}" rel="stylesheet" />{% endblock %}
@@ -12,15 +12,6 @@
     
     <span class="v3_15">LOGOTIPO_AUTOCINE</span>
     <div class="v8_16"></div>
-  
-
-  
-  
-
-
-    
-
-
     <div class="container mt-5">
         <div class="row justify-content-center">
           <div class="col-md-6">
