--- a/autocine - django/autocine_pig/templates/registration/register.html
+++ b/autocine - django/autocine_pig/templates/registration/register.html
@@ -1,35 +1,25 @@
-{% extends './base.html' %}
+{% extends 'autocine_pig/base.html' %}
 {% load static %}
 
 {% block css %} <link href="{% static 'autocine_pig/registrar/css/main.css' %}" rel="stylesheet" />{% endblock %}
+
 {% block titulo %} Registrarse / Autocine {% endblock %}
+
 
 {% block contenido %} 
 
-
     <div class="v1_5"></div>
-    <div class="v8_18"></div>
-    
+    <div class="v8_18"></div> 
     <span class="v3_15">LOGOTIPO_AUTOCINE</span>
     <div class="v8_16"></div>
-  
-
-
-
-    
-    <form action="" method="POST">
+      
+    <form class="form" method="POST">
 
         {% csrf_token %}
-        {{ form.as_p  }}
+        {{ form.as_p }}
         
-    
-    <input type="submit">
+        <button type="submit" id="submit">Registrarse</button>
     
     </form>
-  
-
-
-  
-
 
 {% endblock %}
