Se ajustan espacios y se coloca una descripción en la hoja de reserva

--- a/autocine - django/autocine_pig/templates/autocine_pig/reserva.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/reserva.html
@@ -1,1 +1,2 @@
-<h1>hola</h1>
+<h1>La Página del Proceso de Reserva, se encuentra en Mantenimiento.</h1>
+<h1>Perdón por las molestias ocasionadas</h1>
