--- a/autocine - django/autocine_pig/templates/autocine_pig/reserva.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/reserva.html
@@ -31,28 +31,18 @@ Valores
     <div class="v9_184"></div>
     <div class="v9_186"></div>
     <div class="v9_187"></div>
-    <span class="v9_188">Valores de Cartelera</span>
-    <div class="v10_2"><h2>La Pelicula "{{ pelicula.titulo }}" tiene los siguientes valores:</h2>
-      {% if valores %}
-        <ul>
-          {% for valor in valores %}
-            <li>
-              <a href="{% url 'reserva' %}">
-                {{ valor.valor }}
-              </a>
-              </li>
-          {% endfor %}
-        </ul>
-      {% else %}
-        <p>No se encontraron valores para esta película.</p>
-      {% endif %}</div>
+    <span class="v9_188">Ticket de Reserva</span>
+    
     
     <div class="v10_5"></div>
     <span class="v10_6">Para consultas puede mandar mail a: </span
     ><span class="v10_7">consultas@miradas.fugaces.com</span>
   </div>
 
+  
 
+        
+    </div>
  
 
   
