--- a/autocine - django/autocine_pig/static/autocine_pig/login/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/login/css/main.css
@@ -110,5 +110,16 @@ h2 {
   width: 25%;
 }
 
+
+footer {
+  background-color: black;
+  color: rgb(243, 235, 235);
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 30px;
+  margin: 20px;
+
+}
   
   
