--- a/autocine - django/autocine_pig/static/autocine_pig/registrar/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/registrar/css/main.css
@@ -142,3 +142,24 @@ label {
 
   color: #db1414;
 }
+
+button {
+
+  background-color: #2b8a2e;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+footer {
+  background-color: black;
+  color: rgb(243, 235, 235);
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 30px;
+  margin: 20px;
+
+}
