--- a/autocine - django/autocine_pig/static/autocine_pig/valores/css/main.css
+++ b/autocine - django/autocine_pig/static/autocine_pig/valores/css/main.css
@@ -68,7 +68,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 138px;
+  left: 100px;
 
   text-decoration: none;
   background-color: transparent; 
@@ -85,7 +85,7 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 1050px;
+  left: 450px;
 
   text-decoration: none;
   background-color: transparent; 
@@ -102,7 +102,24 @@ body {
   color: rgba(255,255,255,1);
   position: absolute;
   top: 281px;
-  left: 650px;
+  left: 850px;
+
+  text-decoration: none;
+  background-color: transparent; 
+  border: none; 
+  outline: none;
+  font-family: Inter;
+  font-weight: Regular;
+  font-size: 32px;
+  opacity: 1;
+  text-align: center;
+}
+.v9_180a button a {
+  width: 128px;
+  color: rgba(255,255,255,1);
+  position: absolute;
+  top: 281px;
+  left: 1140px;
 
   text-decoration: none;
   background-color: transparent; 
@@ -209,11 +226,13 @@ body {
   top: 449px;
   left: 497px;
   border: 10px solid rgba(255,255,255,0.6200000047683716);
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   overflow: hidden;
+  color: aliceblue;
+  text-decoration: none;
 }
 .v10_3 {
   width: 374px;
@@ -264,18 +283,22 @@ body {
 }
 
 
-.v10_2 h2 {
+.v10_2 li {
 
   color: aliceblue;
   margin: 20px;
   padding: 20px;
   text-align: justify;
+  font-size: x-large;
+  text-decoration: none;
 }
 
-.v10_2 p {
+.v10_2 a {
 
-  color: aliceblue;
+  color: rgb(9, 231, 28);
   margin: 20px;
   padding: 20px;
   text-align: justify;
+  text-decoration: none;
+  
 }
