--- a/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
+++ b/autocine - django/autocine_pig/templates/autocine_pig/complejos.html
@@ -31,7 +31,7 @@ Complejos
 
 
   <span class="v9_95">
-    {% if pelicula and pelicula.id %}
+    {% if pelicula %}
       <h2>La Película "{{ pelicula.titulo }}" está disponible para verla en:</h2>
       {% if complejos %}
         <ul>
@@ -52,15 +52,9 @@ Complejos
     {% endif %}
   </span>
 
-  
-
-
-
-
-
-
 
 </div>
+
 
 
 
